Blank target links fix

--- a/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.html
+++ b/packages/web/src/app/doc-pages/cms/cms-page/cms-page.component.html
@@ -28,7 +28,7 @@
               {{ cmsContent.title ? cmsContent.title : '' }}
             </span>
             <span *ngIf="cmsContent.figmaUrl" class="e-pl-16 doc-page-heading__figma-icon">
-              <a href="{{ cmsContent.figmaUrl }}" target="_blank">
+              <a href="{{ cmsContent.figmaUrl }}" target="_blank" rel="noopener">
                 <img src="../../../../assets/icons/figma.svg" alt="Figma ikon" />
               </a>
             </span>
