--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
@@ -129,6 +129,7 @@
                   class="e-link e-link--inline e-link--new-tab"
                   href="https://www.figma.com/file/gh5MaG2NWKVODTk1p3cO6s/Tables?node-id=2927%3A24058"
                   target="_blank"
+                  rel="noopener"
                 >
                   <span class="e-link__title">Figma</span>
                   <span class="e-link__icon">
@@ -452,6 +453,7 @@
                   class="e-link e-link--inline e-link--new-tab"
                   href="https://www.figma.com/file/gh5MaG2NWKVODTk1p3cO6s/Tables?node-id=2927%3A24058"
                   target="_blank"
+                  rel="noopener"
                 >
                   <span class="e-link__title">Figma</span>
                   <span class="e-link__icon">
