--- a/packages/web/src/app/doc-pages/other-pages/faq-doc/faq-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/faq-doc/faq-doc.component.html
@@ -44,6 +44,7 @@
                 class="e-link e-link--new-tab e-link--inline"
                 href="https://elvia-group.slack.com/archives/C01C1DU9X1Q"
                 target="_blank"
+                rel="noopener"
               >
                 <span class="e-link__title">#designsystemet</span>
                 <span class="e-link__icon">
@@ -56,6 +57,7 @@
                 class="e-link e-link--new-tab e-link--inline"
                 href="https://github.com/3lvia/designsystem/issues/new/choose"
                 target="_blank"
+                rel="noopener"
               >
                 <span class="e-link__title">github form</span>
                 <span class="e-link__icon">
