--- a/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/get-started-doc/get-started-doc.component.html
@@ -146,6 +146,7 @@
                       class="e-link e-link--inline e-link--new-tab"
                       href="https://jhildenbiddle.github.io/css-vars-ponyfill/#/"
                       target="_blank"
+                      rel="noopener"
                     >
                       <span class="e-link__title">ponyfill documentation here.</span>
                       <span class="e-link__icon">
@@ -267,6 +268,7 @@
                 class="e-link e-link--new-tab e-link--inline"
                 href="https://elvia-group.slack.com/archives/C01C1DU9X1Q"
                 target="_blank"
+                rel="noopener"
               >
                 <span class="e-link__title">#designsystemet</span>
                 <span class="e-link__icon">
@@ -305,6 +307,7 @@
                   class="e-link e-link--inline e-link--new-tab"
                   href="https://www.figma.com/downloads/"
                   target="_blank"
+                  rel="noopener"
                 >
                   <span class="e-link__title">download the app</span>
                   <span class="e-link__icon">
@@ -316,6 +319,7 @@
                   class="e-link e-link--inline e-link--new-tab"
                   href="https://www.figma.com/files/880078299274452916/team/619061899486461825/ELVIA"
                   target="_blank"
+                  rel="noopener"
                   aria-hidden="true"
                 >
                   <span class="e-link__title">Elvia library</span>
@@ -408,6 +412,7 @@
                 class="e-link e-link--inline e-link--new-tab"
                 href="https://fonts.google.com/specimen/Red+Hat+Display"
                 target="_blank"
+                rel="noopener"
               >
                 <span class="e-link__title">Red Hat can be downloaded here</span>
                 <span class="e-link__icon">
@@ -448,6 +453,7 @@
                 class="e-link e-link--inline e-link--new-tab"
                 href="https://builttoadapt.io/intro-to-the-8-point-grid-system-d2573cde8632"
                 target="_blank"
+                rel="noopener"
               >
                 <span class="e-link__title">an intro to the 8 point grid.</span>
                 <span class="e-link__icon">
@@ -511,6 +517,7 @@
         class="e-link e-link--inline e-link--new-tab"
         href="https://app.contentful.com/spaces/zez3t3t1iiwd"
         target="_blank"
+        rel="noopener"
       >
         Contentful
       </a>
