--- a/packages/web/src/app/doc-pages/other-pages/typography-doc/typography-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/typography-doc/typography-doc.component.html
@@ -9,6 +9,7 @@
         class="e-link e-link--inline e-link--new-tab"
         href="https://fonts.google.com/?query=red+hat"
         target="_blank"
+        rel="noopener"
       >
         <span class="e-link__title">dowloaded here</span>
         <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i></span>
