--- a/packages/web/src/app/shell/header/header.component.html
+++ b/packages/web/src/app/shell/header/header.component.html
@@ -48,7 +48,14 @@
     >
       Dev
     </a>
-    <a class="tabs-links tabs-links-dev" target="_blank" *ngIf="devMode" href="/react-preview" role="tab">
+    <a
+      class="tabs-links tabs-links-dev"
+      target="_blank"
+      rel="noopener"
+      *ngIf="devMode"
+      href="/react-preview"
+      role="tab"
+    >
       React
     </a>
   </div>
