--- a/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/icon-doc/icon-doc.component.html
@@ -259,6 +259,7 @@
             class="e-link e-link--new-tab"
             href="https://intercom.help/streamlinehq/en/articles/5354366-streamline-premium-license"
             target="_blank"
+            rel="noopener"
           >
             <span class="e-link__title">here</span>
             <span class="e-link__icon"><i class="e-icon e-icon--new_tab-bold" aria-hidden="true"></i></span>
