--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.html
@@ -48,6 +48,7 @@
         (click)="codepenForm.submit()"
         class="e-link e-link--new-tab e-link--inverted e-link--sm"
         target="_blank"
+        rel="noopener"
       >
         <span class="e-link__title">Try in codepen</span>
         <span class="e-link__icon">
