--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
@@ -11,7 +11,7 @@
         <h1 class="big-header e-mb-0 e-w-100">
           <ng-content select="headerTitle"></ng-content>
           <div class="e-pl-16">
-            <a *ngIf="figmaUrl" href="{{ figmaUrl }}" target="_blank">
+            <a *ngIf="figmaUrl" href="{{ figmaUrl }}" target="_blank" rel="noopener">
               <img src="../../../assets/icons/figma.svg" alt="Figma icon" />
             </a>
           </div>
