--- a/packages/web/src/app/shell/footer/footer.component.html
+++ b/packages/web/src/app/shell/footer/footer.component.html
@@ -12,6 +12,7 @@
                 class="e-link e-link--inline e-link--new-tab e-link--sm e-link--inverted"
                 href="https://elvia-group.slack.com/archives/C01C1DU9X1Q"
                 target="_blank"
+                rel="noopener"
               >
                 <span class="e-link__title">#designsystemet</span>
                 <span class="e-link__icon">
@@ -66,6 +67,7 @@
                 class="e-link e-link--inline e-link--sm e-link--new-tab e-link--inverted"
                 href="https://elvia-group.slack.com/archives/C01C1DU9X1Q"
                 target="_blank"
+                rel="noopener"
               >
                 <span class="e-link__title">#designsystemet</span>
                 <span class="e-link__icon">
@@ -84,13 +86,14 @@
           <div class="text-align-center">
             <div class="e-text-right">
               <span class="links">
-                <a href="https://app.contentful.com/spaces/zez3t3t1iiwd/home" target="_blank">
+                <a href="https://app.contentful.com/spaces/zez3t3t1iiwd/home" target="_blank" rel="noopener">
                   <img class="default-img" src="../../../assets/icons/Contentful.svg" alt="Contentful icon" />
                   <img
                     class="inverted-img"
                     src="../../../assets/icons/Contentful-inverted.svg"
                     alt="Contentful icon"
                     target="_blank"
+                    rel="noopener"
                   />
                 </a>
               </span>
@@ -98,6 +101,7 @@
                 <a
                   href="https://www.figma.com/files/880078299274452916/project/5995782/Designsystem-(Elvis)"
                   target="_blank"
+                  rel="noopener"
                 >
                   <img class="default-img" src="../../../assets/icons/figma-header.svg" alt="Figma icon" />
                   <img
@@ -105,17 +109,19 @@
                     src="../../../assets/icons/figma-header_inverted.svg"
                     alt="Figma icon"
                     target="_blank"
+                    rel="noopener"
                   />
                 </a>
               </span>
               <span class="links e-ml-16">
-                <a href="https://github.com/3lvia/designsystem" target="_blank">
+                <a href="https://github.com/3lvia/designsystem" target="_blank" rel="noopener">
                   <img class="default-img" src="../../../assets/icons/github-header.svg" alt="Github icon" />
                   <img
                     class="inverted-img"
                     src="../../../assets/icons/github-header_inverted.svg"
                     alt="Github icon"
                     target="_blank"
+                    rel="noopener"
                   />
                 </a>
               </span>
