--- a/packages/elvis/src/components/_main.scss
+++ b/packages/elvis/src/components/_main.scss
@@ -19,6 +19,7 @@
 @use 'stepper.scss';
 @use 'table.scss';
 @use 'tag.scss';
+@use 'thumbnail.scss';
 @use 'tooltip.scss';
 @use './form/toggle.scss';
 @use './form/checkbox.scss';
