--- a/packages/elvis/src/components/card.scss
+++ b/packages/elvis/src/components/card.scss
@@ -1,5 +1,5 @@
 @use '../variables/colors';
-@use '../variables/shadows';
+@use '../utilities/shadows';
 @use '../variables/typography';
 @use '../utilities/breakpoints';
 @use '../utilities/helpers';
@@ -16,7 +16,7 @@ $card-actions-button-spacing: 25px;
 // DEPRECATED
 .e-card {
   border-radius: $card-radius;
-  box-shadow: shadows.$e-shadow-3;
+  box-shadow: shadows.getShadow('soft');
   display: inline-flex;
   width: 100%;
   flex-direction: column;
@@ -35,19 +35,19 @@ $card-actions-button-spacing: 25px;
   }
 
   &--shadow-soft {
-    box-shadow: shadows.$e-shadow-3;
+    box-shadow: shadows.getShadow('soft');
   }
 
   &--shadow-medium {
-    box-shadow: shadows.$e-shadow-6;
+    box-shadow: shadows.getShadow('medium');
   }
 
   &--shadow-hard {
-    box-shadow: shadows.$e-shadow-8;
+    box-shadow: shadows.getShadow('hard');
   }
 
   &--on-white {
-    box-shadow: shadows.$e-shadow-6;
+    box-shadow: shadows.getShadow('medium');
   }
 
   &__title {
