--- a/packages/elvis/src/variables/shadows.scss
+++ b/packages/elvis/src/variables/shadows.scss
@@ -1,3 +1,14 @@
-$e-shadow-3: 0px 0px 50px rgba(0, 0, 0, 0.03);
-$e-shadow-6: 0px 0px 40px rgba(0, 0, 0, 0.06);
-$e-shadow-8: 0px 0px 30px rgba(0, 0, 0, 0.08);
+@use 'sass:map';
+
+$shadows: (
+  '3': 0px 0px 50px rgba(0, 0, 0, 0.03),
+  '6': 0px 0px 40px rgba(0, 0, 0, 0.06),
+  '8': 0px 0px 30px rgba(0, 0, 0, 0.08),
+);
+
+$shadowVariables: (
+  'none': 'none',
+  'soft': map.get($shadows, '3'),
+  'medium': map.get($shadows, '6'),
+  'hard': map.get($shadows, '8'),
+);
