--- a/packages/web/src/app/doc-pages/components/thumbnail-doc/thumbnail-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/thumbnail-doc/thumbnail-doc.component.html
@@ -10,18 +10,18 @@
 <div class="page-body">
   <!--TEMPORARY WAY TO SHOW LIVE EXAMPLES BEFORE CODE-GENERATOR-->
   <div class="e-my-48" class="component-preview-temp component-preview-animation">
-    <div class="e-flex e-gap-24">
+    <div class="e-flex e-gap-8">
       <button class="e-thumbnail">
-        <img
-          src="assets/holidayIllustrations/ChristmasIllustration.png"
-          alt="Designsystem christmas illustration"
-        />
+        <img src="assets/thumbnail/image.png" alt="Thumbnail example image 1" />
+      </button>
+      <button class="e-thumbnail">
+        <img src="assets/thumbnail/image-1.png" alt="Thumbnail example image 2" />
+      </button>
+      <button class="e-thumbnail">
+        <img src="assets/thumbnail/image-2.png" alt="Thumbnail example image 3" />
       </button>
       <button class="e-thumbnail e-thumbnail--selected">
-        <img
-          src="assets/holidayIllustrations/ChristmasIllustration.png"
-          alt="Designsystem christmas illustration"
-        />
+        <img src="assets/thumbnail/image-3.png" alt="Thumbnail example image 4" />
       </button>
     </div>
     <div class="e-w-100">
@@ -29,7 +29,7 @@
     </div>
   </div>
 
-  <!--TYPE-->
+  <!--USAGE-->
   <app-component-section [sectionTitle]="'Usage'">
     <ng-container ngProjectAs="sectionContent">
       <!-- <app-component-example-v1 [codeHTML]="example1"></app-component-example-v1>
