--- a/packages/elvis/src/components/table.scss
+++ b/packages/elvis/src/components/table.scss
@@ -119,6 +119,7 @@ $grey10: colors.color('grey-10');
 
   &.e-table--no-stripes {
     tbody {
+      tr,
       tr:nth-of-type(odd) th,
       tr:nth-of-type(odd) td {
         background: colors.color('white');
