--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
@@ -118,10 +118,10 @@
           <div class="e-accordion__content">
             <div><label class="e-label e-label--orange e-mb-16">Figma only</label></div>
             <div>
-              Accordion is used when you need to have additional information to the row. An accordion
-              (20x20px) is placed all the way to the right with the possibility to expand/collapse on the
-              whole row. Keep the header title above empty. You can have multiple rows open at the same time
-              (the user decides when to close/open).
+              Accordion is used when you need to have additional information to the row. An accordion is
+              placed all the way to the right with the possibility to expand/collapse on the whole row. Keep
+              the header title above empty. You can have multiple rows open at the same time (the user decides
+              when to close/open).
             </div>
             <ul class="e-list e-mt-24">
               <li>
