Revert "SonarCloud fixes"
This reverts commit a334ea5ee317f01e3c7291a60210a1be7e9385d3.

--- a/packages/elvis/css/elvis.css
+++ b/packages/elvis/css/elvis.css
@@ -7012,6 +7012,7 @@ input:focus {
   background: transparent;
   border: 0;
   font-size: 100%;
+  font: inherit;
   vertical-align: baseline;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
@@ -7019,10 +7020,13 @@ input:focus {
 }
 .e-thumbnail img {
   width: var(--e-spacing-56);
-  border-radius: 8px;
   aspect-ratio: 1/1;
   object-fit: cover;
+  object-fit: cover;
   vertical-align: bottom;
+  border-radius: 8px;
+  position: relative;
+  border-radius: 8px;
 }
 .e-thumbnail::after {
   --offset: 8px;
