--- a/packages/elvis/src/components/thumbnail.scss
+++ b/packages/elvis/src/components/thumbnail.scss
@@ -9,6 +9,7 @@
   background: transparent;
   border: 0;
   font-size: 100%;
+  font: inherit;
   vertical-align: baseline;
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
@@ -16,10 +17,13 @@
 
   img {
     width: var(--e-spacing-56);
-    border-radius: 8px;
     aspect-ratio: 1/1;
     object-fit: cover;
+    object-fit: cover;
     vertical-align: bottom;
+    border-radius: 8px;
+    position: relative;
+    border-radius: 8px;
   }
 
   &::after {
