--- a/packages/web/src/app/doc-pages/components/thumbnail-doc/thumbnail-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/thumbnail-doc/thumbnail-doc.component.html
@@ -1,3 +1,6 @@
+<button class="e-thumbnail">
+  <img src="assets/thumbnail/image-3.png" alt="Thumbnail example image 4" />
+</button>
 <!--HEADER-->
 <app-component-header [figmaUrl]="figmaUrl">
   <ng-container ngProjectAs="headerTitle">Thumbnail</ng-container>
